--- a/index.html
+++ b/index.html
@@ -60,9 +60,14 @@
           <div class="subheading mb-0">Atividades Experimentais de Física · <span class="text-primary">Uma prosposta para o ensino</span>         
           </div>
           <div class="subheading mb-5">(18) 99651-4714 ·
-            <a href="mailto:name@email.com">nome@email.com</a>
+            <a href="mailto:name@email.com">douglashob@live.com</a>
           </div>
-          <p class="lead mb-5">Descrição breve</p>
+          <p class="lead mb-4">
+            As atividades experimentais vêm sendo aplicadas nas escolas há mais de um século, exercendo papel fundamental no processo de ensino e aprendizagem e nas relações de confiança entre aluno e professor. 
+As aulas teóricas e explicativas são essências para a demonstração e dedução de algumas expressões matemáticas e conceitos físicos, todavia, ao levantar discussões em sala, desafiando os alunos a questionar, raciocinar, pôr em prática suas opiniões, aguçam um prazer significativo pela descoberta.
+As práticas de laboratório, por sua vez melhoram a qualidade do ensino, uma vez que no momento em que os alunos manuseiam os materiais a serem utilizados nos experimentos, estabelecem uma conexão com a realidade, saindo do campo de abstração, onde apenas as teorias são apresentadas. 
+Essas conexões entre os assuntos teóricos com a prática laboratorial auxiliam no processo de formalização dos conceitos físicos. Esse deve ser o nosso foco: conseguir trazer nossos alunos à ambientes favoráveis à aprendizagem.
+          </p>
           <div class="social-icons">            
             <a href="https://www.facebook.com/douglas.braz.330?fb_dtsg_ag=AdzmHPdjdUccT76mbJGfiJRJ5-a-HXKWq_HzKGdDujM4hg%3AAdw2OhSjWd4HP-StoQ5ZByH4lpKYmQR0TiwUueExYGMg7w" target="blank">
               <i class="fab fa-facebook-f"></i>
@@ -79,21 +84,21 @@
 
           <div class="resume-item d-flex flex-column flex-md-row">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Universidade do Estado de São Paulo</h3>
-              <div class="subheading mb-3">Mestrado...</div>              
+              <h3 class="mb-0">Universidade do Estado de São Paulo - Unesp</h3>
+              <div class="subheading mb-3">Mestrado Nacional Profissional em Ensino de Física</div>              
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">August 2002 - May 2006</span>
+              <span class="text-primary">Agosto 2016 - Outubro 2018</span>
             </div>
           </div>
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Universidade do Oeste Paulista</h3>
+              <h3 class="mb-0">Universidade do Oeste Paulista - Unoeste</h3>
               <div class="subheading mb-3">Bacharelado em Matemática</div>              
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">August 2006 - May 2010</span>
+              <span class="text-primary">Fevereiro 2013 - Junho 2016</span>
             </div>
           </div>          
 
