Adicionado e-mail no href

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           <div class="subheading mb-0">Atividades Experimentais de Física · <span class="text-primary">Uma prosposta para o ensino</span>         
           </div>
           <div class="subheading mb-5">(18) 99651-4714 ·
-            <a href="mailto:name@email.com">douglashob@live.com</a>
+            <a href="douglashob@live.com">douglashob@live.com</a>
           </div>
           <p class="lead mb-4">
             As atividades experimentais vêm sendo aplicadas nas escolas há mais de um século, exercendo papel fundamental no processo de ensino e aprendizagem e nas relações de confiança entre aluno e professor. 
