Adição da pasta arquivos e inserção dos links de astronomia

--- a/index.html
+++ b/index.html
@@ -130,7 +130,20 @@ Essas conexões entre os assuntos teóricos com a prática laboratorial auxiliam
           <h2 class="mb-5">Astronomia</h2>
           <ul class="fa-ul mb-0">
             <li>
-              <i class="fa-li fa fa-file-pdf-o text-danger"></i><a href="#">Link 1</a></li>            
+              <i class="fa-li fa fa-file-pdf-o text-danger"></i><a href="../arquivos/astronomia/astronomia.pdf">Astronomia - Texto</a>
+            </li>
+            <li>
+              <i class="fa-li fa fa-file-pdf-o text-danger"></i><a href="../arquivos/astronomia/campeonato_pioes_papelao.pdf">Campeonato de piões de papelão</a>
+            </li>
+            <li>
+              <i class="fa-li fa fa-file-pdf-o text-danger"></i><a href="../arquivos/astronomia/eixo_rotacao_terra.pdf">Eixo de rotação da terra</a>
+            </li>
+            <li>
+              <i class="fa-li fa fa-file-pdf-o text-danger"></i><a href="../arquivos/astronomia/fases_lua.pdf">Fases da lua</a>
+            </li>
+            <li>
+              <i class="fa-li fa fa-file-pdf-o text-danger"></i><a href="../arquivos/astronomia/montando_uma_constelacao.pdf">Montando uma constelação</a>
+            </li>            
           </ul>
         </div>
       </section>
