Atualização dos roteiros experimentais

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ Essas conexões entre os assuntos teóricos com a prática laboratorial auxiliam
           <h2 class="mb-5">Astronomia</h2>
           <ul class="fa-ul mb-0">
             <li>
-              <i class="fa-li fa fa-file-pdf-o text-danger"></i><a href="../arquivos/astronomia/astronomia.pdf">Astronomia - Texto</a>
+              <i class="fa-li fa fa-file-pdf-o text-danger"></i><a href="../../arquivos/astronomia/astronomia.pdf">Astronomia - Texto</a>
             </li>
             <li>
               <i class="fa-li fa fa-file-pdf-o text-danger"></i><a href="../arquivos/astronomia/campeonato_pioes_papelao.pdf">Campeonato de piões de papelão</a>
@@ -148,6 +148,84 @@ Essas conexões entre os assuntos teóricos com a prática laboratorial auxiliam
         </div>
       </section>
 
+      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="mecanica">
+        <div class="my-auto">
+          <h2 class="mb-5">Mecânica</h2>
+          <ul class="fa-ul mb-0">
+            <li>
+              <i class="fa-li fa fa-file-pdf-o text-danger"></i><a href="../arquivos/mecanica/mecanica_texto.pdf">Mecânica - Texto</a>
+            </li>
+            <li>
+              <i class="fa-li fa fa-file-pdf-o text-danger"></i><a href="../arquivos/mecanica/abrindo_coco_com_bala.pdf">Abrindo coco com bala</a>
+            </li>
+            <li>
+              <i class="fa-li fa fa-file-pdf-o text-danger"></i><a href="../arquivos/mecanica/centro_de_gravidade.pdf">Centro de gravidade</a>
+            </li>            
+            <li>
+              <i class="fa-li fa fa-file-pdf-o text-danger"></i><a href="../arquivos/mecanica/acao_forcas_internas.pdf">Compensando os movimentos na ação de forças internas</a>
+            </li>
+            <li>
+              <i class="fa-li fa fa-file-pdf-o text-danger"></i><a href="../arquivos/mecanica/construindo_um_dinamometro.pdf">Construindo um dinamômetro - Lei de Hooke</a>
+            </li>
+            <li>
+              <i class="fa-li fa fa-file-pdf-o text-danger"></i><a href="../arquivos/mecanica/forca_centripeta.pdf">Força centrípeta</a>
+            </li>
+            <li>
+              <i class="fa-li fa fa-file-pdf-o text-danger"></i><a href="../arquivos/mecanica/garrafa_fixa.pdf">Garrafa fixa - Princípio de Inércia</a>
+            </li>
+            <li>
+              <i class="fa-li fa fa-file-pdf-o text-danger"></i><a href="../arquivos/mecanica/acao_reacao.pdf">Princípio da ação e reação</a>
+            </li>
+            <li>
+              <i class="fa-li fa fa-file-pdf-o text-danger"></i><a href="../arquivos/mecanica/principio_fundamental_dinamica.pdf">Princípio fundamental da dinâmica</a>
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="mecanica_fluidos">
+        <div class="my-auto">
+          <h2 class="mb-5">Mecânica dos Fluídos</h2>
+          <ul class="fa-ul mb-0">
+            <li>
+              <i class="fa-li fa fa-file-pdf-o text-danger"></i><a href="../arquivos/mecanica_fluidos/mecanica_fluidos_texto.pdf">Mecânica dos Fluídos - Texto</a>
+            </li>
+            <li>
+              <i class="fa-li fa fa-file-pdf-o text-danger"></i><a href="../arquivos/mecanica_fluidos/densidade_da_agua.pdf">Densidade da água</a>
+            </li>
+            <li>
+              <i class="fa-li fa fa-file-pdf-o text-danger"></i><a href="../arquivos/mecanica_fluidos/enchendo_bexiga.pdf">Enchendo bexiga sem assoprar</a>
+            </li>            
+            <li>
+              <i class="fa-li fa fa-file-pdf-o text-danger"></i><a href="../arquivos/mecanica_fluidos/entendendo_densidade.pdf">Entendendo a densidade</a>
+            </li>
+            <li>
+              <i class="fa-li fa fa-file-pdf-o text-danger"></i><a href="../arquivos/mecanica_fluidos/experimentando_arquimedes.pdf">Experimentando com Arquimedes</a>
+            </li>
+            <li>
+              <i class="fa-li fa fa-file-pdf-o text-danger"></i><a href="../arquivos/mecanica_fluidos/identificando_materiais.pdf">Identificando os materiais</a>
+            </li>
+            <li>
+              <i class="fa-li fa fa-file-pdf-o text-danger"></i><a href="../arquivos/mecanica_fluidos/ar_ocupa_espaco_um.pdf">O ar ocupa espaço (1)</a>
+            </li>
+            <li>
+              <i class="fa-li fa fa-file-pdf-o text-danger"></i><a href="../arquivos/mecanica_fluidos/ar_ocupa_espaco_dois.pdf">O ar ocupa espaço (2)</a>
+            </li>
+            <li>
+              <i class="fa-li fa fa-file-pdf-o text-danger"></i><a href="../arquivos/mecanica_fluidos/ar_peso.pdf">O ar tem peso?</a>              
+            </li>
+            <li>
+              <i class="fa-li fa fa-file-pdf-o text-danger"></i><a href="../arquivos/mecanica_fluidos/ovo_garrafa.pdf">Ovo na garrafa</a>
+            </li>
+            <li>
+              <i class="fa-li fa fa-file-pdf-o text-danger"></i><a href="../arquivos/mecanica_fluidos/principio_stevin.pdf">Princípio de Stevin</a>
+            </li>
+            <li>
+              <i class="fa-li fa fa-file-pdf-o text-danger"></i><a href="../arquivos/mecanica_fluidos/tensao_superficial.pdf">Tensão superficial</a>
+            </li>
+          </ul>
+        </div>
+      </section>
     </div>
 
     <!-- Bootstrap core JavaScript -->
