Atualização dos roteiros experimentais 2

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ Essas conexões entre os assuntos teóricos com a prática laboratorial auxiliam
           <h2 class="mb-5">Astronomia</h2>
           <ul class="fa-ul mb-0">
             <li>
-              <i class="fa-li fa fa-file-pdf-o text-danger"></i><a href="../../arquivos/astronomia/astronomia.pdf">Astronomia - Texto</a>
+              <i class="fa-li fa fa-file-pdf-o text-danger"></i><a href="../mestrado/arquivos/astronomia/astronomia.pdf">Astronomia - Texto</a>
             </li>
             <li>
               <i class="fa-li fa fa-file-pdf-o text-danger"></i><a href="../arquivos/astronomia/campeonato_pioes_papelao.pdf">Campeonato de piões de papelão</a>
