--- a/index.html
+++ b/index.html
@@ -130,19 +130,19 @@ Essas conexões entre os assuntos teóricos com a prática laboratorial auxiliam
           <h2 class="mb-5">Astronomia</h2>
           <ul class="fa-ul mb-0">
             <li>
-              <i class="fa-li fa fa-file-pdf-o text-danger"></i><a href="../mestrado/arquivos/astronomia/astronomia.pdf">Astronomia - Texto</a>
+              <i class="fa-li fa fa-file-pdf-o text-danger"></i><a href="../mestrado/arquivos/astronomia/astronomia.pdf" target="blank">Astronomia - Texto</a>
             </li>
             <li>
-              <i class="fa-li fa fa-file-pdf-o text-danger"></i><a href="../arquivos/astronomia/campeonato_pioes_papelao.pdf">Campeonato de piões de papelão</a>
+              <i class="fa-li fa fa-file-pdf-o text-danger"></i><a href="../mestrado/arquivos/astronomia/campeonato_pioes_papelao.pdf">Campeonato de piões de papelão</a>
             </li>
             <li>
-              <i class="fa-li fa fa-file-pdf-o text-danger"></i><a href="../arquivos/astronomia/eixo_rotacao_terra.pdf">Eixo de rotação da terra</a>
+              <i class="fa-li fa fa-file-pdf-o text-danger"></i><a href="../mestrado/arquivos/astronomia/eixo_rotacao_terra.pdf">Eixo de rotação da terra</a>
             </li>
             <li>
-              <i class="fa-li fa fa-file-pdf-o text-danger"></i><a href="../arquivos/astronomia/fases_lua.pdf">Fases da lua</a>
+              <i class="fa-li fa fa-file-pdf-o text-danger"></i><a href="../mestrado/arquivos/astronomia/fases_lua.pdf">Fases da lua</a>
             </li>
             <li>
-              <i class="fa-li fa fa-file-pdf-o text-danger"></i><a href="../arquivos/astronomia/montando_uma_constelacao.pdf">Montando uma constelação</a>
+              <i class="fa-li fa fa-file-pdf-o text-danger"></i><a href="../mestrado/arquivos/astronomia/montando_uma_constelacao.pdf">Montando uma constelação</a>
             </li>            
           </ul>
         </div>
@@ -153,31 +153,31 @@ Essas conexões entre os assuntos teóricos com a prática laboratorial auxiliam
           <h2 class="mb-5">Mecânica</h2>
           <ul class="fa-ul mb-0">
             <li>
-              <i class="fa-li fa fa-file-pdf-o text-danger"></i><a href="../arquivos/mecanica/mecanica_texto.pdf">Mecânica - Texto</a>
+              <i class="fa-li fa fa-file-pdf-o text-danger"></i><a href="../mestrado/arquivos/mecanica/mecanica_texto.pdf">Mecânica - Texto</a>
             </li>
             <li>
-              <i class="fa-li fa fa-file-pdf-o text-danger"></i><a href="../arquivos/mecanica/abrindo_coco_com_bala.pdf">Abrindo coco com bala</a>
+              <i class="fa-li fa fa-file-pdf-o text-danger"></i><a href="../mestrado/arquivos/mecanica/abrindo_coco_com_bala.pdf">Abrindo coco com bala</a>
             </li>
             <li>
-              <i class="fa-li fa fa-file-pdf-o text-danger"></i><a href="../arquivos/mecanica/centro_de_gravidade.pdf">Centro de gravidade</a>
+              <i class="fa-li fa fa-file-pdf-o text-danger"></i><a href="../mestrado/arquivos/mecanica/centro_de_gravidade.pdf">Centro de gravidade</a>
             </li>            
             <li>
-              <i class="fa-li fa fa-file-pdf-o text-danger"></i><a href="../arquivos/mecanica/acao_forcas_internas.pdf">Compensando os movimentos na ação de forças internas</a>
+              <i class="fa-li fa fa-file-pdf-o text-danger"></i><a href="../mestrado/arquivos/mecanica/acao_forcas_internas.pdf">Compensando os movimentos na ação de forças internas</a>
             </li>
             <li>
-              <i class="fa-li fa fa-file-pdf-o text-danger"></i><a href="../arquivos/mecanica/construindo_um_dinamometro.pdf">Construindo um dinamômetro - Lei de Hooke</a>
+              <i class="fa-li fa fa-file-pdf-o text-danger"></i><a href="../mestrado/arquivos/mecanica/construindo_um_dinamometro.pdf">Construindo um dinamômetro - Lei de Hooke</a>
             </li>
             <li>
-              <i class="fa-li fa fa-file-pdf-o text-danger"></i><a href="../arquivos/mecanica/forca_centripeta.pdf">Força centrípeta</a>
+              <i class="fa-li fa fa-file-pdf-o text-danger"></i><a href="../mestrado/arquivos/mecanica/forca_centripeta.pdf">Força centrípeta</a>
             </li>
             <li>
-              <i class="fa-li fa fa-file-pdf-o text-danger"></i><a href="../arquivos/mecanica/garrafa_fixa.pdf">Garrafa fixa - Princípio de Inércia</a>
+              <i class="fa-li fa fa-file-pdf-o text-danger"></i><a href="../mestrado/arquivos/mecanica/garrafa_fixa.pdf">Garrafa fixa - Princípio de Inércia</a>
             </li>
             <li>
-              <i class="fa-li fa fa-file-pdf-o text-danger"></i><a href="../arquivos/mecanica/acao_reacao.pdf">Princípio da ação e reação</a>
+              <i class="fa-li fa fa-file-pdf-o text-danger"></i><a href="../mestrado/arquivos/mecanica/acao_reacao.pdf">Princípio da ação e reação</a>
             </li>
             <li>
-              <i class="fa-li fa fa-file-pdf-o text-danger"></i><a href="../arquivos/mecanica/principio_fundamental_dinamica.pdf">Princípio fundamental da dinâmica</a>
+              <i class="fa-li fa fa-file-pdf-o text-danger"></i><a href="../mestrado/arquivos/mecanica/principio_fundamental_dinamica.pdf">Princípio fundamental da dinâmica</a>
             </li>
           </ul>
         </div>
@@ -188,40 +188,40 @@ Essas conexões entre os assuntos teóricos com a prática laboratorial auxiliam
           <h2 class="mb-5">Mecânica dos Fluídos</h2>
           <ul class="fa-ul mb-0">
             <li>
-              <i class="fa-li fa fa-file-pdf-o text-danger"></i><a href="../arquivos/mecanica_fluidos/mecanica_fluidos_texto.pdf">Mecânica dos Fluídos - Texto</a>
+              <i class="fa-li fa fa-file-pdf-o text-danger"></i><a href="../mestrado/arquivos/mecanica_fluidos/mecanica_fluidos_texto.pdf">Mecânica dos Fluídos - Texto</a>
             </li>
             <li>
-              <i class="fa-li fa fa-file-pdf-o text-danger"></i><a href="../arquivos/mecanica_fluidos/densidade_da_agua.pdf">Densidade da água</a>
+              <i class="fa-li fa fa-file-pdf-o text-danger"></i><a href="../mestrado/arquivos/mecanica_fluidos/densidade_da_agua.pdf">Densidade da água</a>
             </li>
             <li>
-              <i class="fa-li fa fa-file-pdf-o text-danger"></i><a href="../arquivos/mecanica_fluidos/enchendo_bexiga.pdf">Enchendo bexiga sem assoprar</a>
+              <i class="fa-li fa fa-file-pdf-o text-danger"></i><a href="../mestrado/arquivos/mecanica_fluidos/enchendo_bexiga.pdf">Enchendo bexiga sem assoprar</a>
             </li>            
             <li>
-              <i class="fa-li fa fa-file-pdf-o text-danger"></i><a href="../arquivos/mecanica_fluidos/entendendo_densidade.pdf">Entendendo a densidade</a>
+              <i class="fa-li fa fa-file-pdf-o text-danger"></i><a href="../mestrado/arquivos/mecanica_fluidos/entendendo_densidade.pdf">Entendendo a densidade</a>
             </li>
             <li>
-              <i class="fa-li fa fa-file-pdf-o text-danger"></i><a href="../arquivos/mecanica_fluidos/experimentando_arquimedes.pdf">Experimentando com Arquimedes</a>
+              <i class="fa-li fa fa-file-pdf-o text-danger"></i><a href="../mestrado/arquivos/mecanica_fluidos/experimentando_arquimedes.pdf">Experimentando com Arquimedes</a>
             </li>
             <li>
-              <i class="fa-li fa fa-file-pdf-o text-danger"></i><a href="../arquivos/mecanica_fluidos/identificando_materiais.pdf">Identificando os materiais</a>
+              <i class="fa-li fa fa-file-pdf-o text-danger"></i><a href="../mestrado/arquivos/mecanica_fluidos/identificando_materiais.pdf">Identificando os materiais</a>
             </li>
             <li>
-              <i class="fa-li fa fa-file-pdf-o text-danger"></i><a href="../arquivos/mecanica_fluidos/ar_ocupa_espaco_um.pdf">O ar ocupa espaço (1)</a>
+              <i class="fa-li fa fa-file-pdf-o text-danger"></i><a href="../mestrado/arquivos/mecanica_fluidos/ar_ocupa_espaco_um.pdf">O ar ocupa espaço (1)</a>
             </li>
             <li>
-              <i class="fa-li fa fa-file-pdf-o text-danger"></i><a href="../arquivos/mecanica_fluidos/ar_ocupa_espaco_dois.pdf">O ar ocupa espaço (2)</a>
+              <i class="fa-li fa fa-file-pdf-o text-danger"></i><a href="../mestrado/arquivos/mecanica_fluidos/ar_ocupa_espaco_dois.pdf">O ar ocupa espaço (2)</a>
             </li>
             <li>
-              <i class="fa-li fa fa-file-pdf-o text-danger"></i><a href="../arquivos/mecanica_fluidos/ar_peso.pdf">O ar tem peso?</a>              
+              <i class="fa-li fa fa-file-pdf-o text-danger"></i><a href="../mestrado/arquivos/mecanica_fluidos/ar_peso.pdf">O ar tem peso?</a>              
             </li>
             <li>
-              <i class="fa-li fa fa-file-pdf-o text-danger"></i><a href="../arquivos/mecanica_fluidos/ovo_garrafa.pdf">Ovo na garrafa</a>
+              <i class="fa-li fa fa-file-pdf-o text-danger"></i><a href="../mestrado/arquivos/mecanica_fluidos/ovo_garrafa.pdf">Ovo na garrafa</a>
             </li>
             <li>
-              <i class="fa-li fa fa-file-pdf-o text-danger"></i><a href="../arquivos/mecanica_fluidos/principio_stevin.pdf">Princípio de Stevin</a>
+              <i class="fa-li fa fa-file-pdf-o text-danger"></i><a href="../mestrado/arquivos/mecanica_fluidos/principio_stevin.pdf">Princípio de Stevin</a>
             </li>
             <li>
-              <i class="fa-li fa fa-file-pdf-o text-danger"></i><a href="../arquivos/mecanica_fluidos/tensao_superficial.pdf">Tensão superficial</a>
+              <i class="fa-li fa fa-file-pdf-o text-danger"></i><a href="../mestrado/arquivos/mecanica_fluidos/tensao_superficial.pdf">Tensão superficial</a>
             </li>
           </ul>
         </div>
