--- a/index.html
+++ b/index.html
@@ -133,16 +133,16 @@ Essas conexões entre os assuntos teóricos com a prática laboratorial auxiliam
               <i class="fa-li fa fa-file-pdf-o text-danger"></i><a href="../mestrado/arquivos/astronomia/astronomia.pdf" target="blank">Astronomia - Texto</a>
             </li>
             <li>
-              <i class="fa-li fa fa-file-pdf-o text-danger"></i><a href="../mestrado/arquivos/astronomia/campeonato_pioes_papelao.pdf">Campeonato de piões de papelão</a>
+              <i class="fa-li fa fa-file-pdf-o text-danger"></i><a href="../mestrado/arquivos/astronomia/campeonato_pioes_papelao.pdf" target="blank">Campeonato de piões de papelão</a>
             </li>
             <li>
-              <i class="fa-li fa fa-file-pdf-o text-danger"></i><a href="../mestrado/arquivos/astronomia/eixo_rotacao_terra.pdf">Eixo de rotação da terra</a>
+              <i class="fa-li fa fa-file-pdf-o text-danger"></i><a href="../mestrado/arquivos/astronomia/eixo_rotacao_terra.pdf" target="blank">Eixo de rotação da terra</a>
             </li>
             <li>
-              <i class="fa-li fa fa-file-pdf-o text-danger"></i><a href="../mestrado/arquivos/astronomia/fases_lua.pdf">Fases da lua</a>
+              <i class="fa-li fa fa-file-pdf-o text-danger"></i><a href="../mestrado/arquivos/astronomia/fases_lua.pdf" target="blank">Fases da lua</a>
             </li>
             <li>
-              <i class="fa-li fa fa-file-pdf-o text-danger"></i><a href="../mestrado/arquivos/astronomia/montando_uma_constelacao.pdf">Montando uma constelação</a>
+              <i class="fa-li fa fa-file-pdf-o text-danger"></i><a href="../mestrado/arquivos/astronomia/montando_uma_constelacao.pdf" target="blank">Montando uma constelação</a>
             </li>            
           </ul>
         </div>
