Adição de linhas separadoras

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ Essas conexões entre os assuntos teóricos com a prática laboratorial auxiliam
           </ul>
         </div>
       </section>
-
+      <hr class="m-0">      
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="mecanica">
         <div class="my-auto">
           <h2 class="mb-5">Mecânica</h2>
@@ -182,7 +182,7 @@ Essas conexões entre os assuntos teóricos com a prática laboratorial auxiliam
           </ul>
         </div>
       </section>
-
+      <hr class="m-0">      
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="mecanica_fluidos">
         <div class="my-auto">
           <h2 class="mb-5">Mecânica dos Fluídos</h2>
@@ -226,7 +226,7 @@ Essas conexões entre os assuntos teóricos com a prática laboratorial auxiliam
           </ul>
         </div>
       </section>
-
+      <hr class="m-0">      
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="termodinamica">
         <div class="my-auto">
           <h2 class="mb-5">Termodinâmica</h2>
@@ -270,7 +270,7 @@ Essas conexões entre os assuntos teóricos com a prática laboratorial auxiliam
           </ul>
         </div>
       </section>
-
+      <hr class="m-0">      
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="optica">
         <div class="my-auto">
           <h2 class="mb-5">Óptica</h2>
@@ -317,7 +317,7 @@ Essas conexões entre os assuntos teóricos com a prática laboratorial auxiliam
           </ul>
         </div>
       </section>
-
+      <hr class="m-0">      
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="ondulatoria">
         <div class="my-auto">
           <h2 class="mb-5">Ondulatória</h2>
@@ -343,7 +343,7 @@ Essas conexões entre os assuntos teóricos com a prática laboratorial auxiliam
           </ul>
         </div>
       </section>
-
+      <hr class="m-0">      
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="eletromagnetismo">
         <div class="my-auto">
           <h2 class="mb-5">Eletromagnetismo</h2>
@@ -390,7 +390,7 @@ Essas conexões entre os assuntos teóricos com a prática laboratorial auxiliam
           </ul>
         </div>
       </section>
-
+      <hr class="m-0">      
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="fisica_moderna">
         <div class="my-auto">
           <h2 class="mb-5">Física Moderna</h2>
