Atualização dos roteiros

--- a/index.html
+++ b/index.html
@@ -59,8 +59,7 @@
           </h1>
           <div class="subheading mb-0">Atividades Experimentais de Física · <span class="text-primary">Uma prosposta para o ensino</span>         
           </div>
-          <div class="subheading mb-5">(18) 99651-4714 ·
-            <a href="douglashob@live.com">douglashob@live.com</a>
+          <div class="subheading mb-5"><a href="douglashob@live.com">douglashob@live.com</a>
           </div>
           <p class="lead mb-4">
             As atividades experimentais vêm sendo aplicadas nas escolas há mais de um século, exercendo papel fundamental no processo de ensino e aprendizagem e nas relações de confiança entre aluno e professor. 
@@ -95,7 +94,7 @@ Essas conexões entre os assuntos teóricos com a prática laboratorial auxiliam
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Universidade do Oeste Paulista - Unoeste</h3>
-              <div class="subheading mb-3">Bacharelado em Matemática</div>              
+              <div class="subheading mb-3">Licenciatura em Matemática</div>              
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">Fevereiro 2013 - Junho 2016</span>
@@ -113,9 +112,84 @@ Essas conexões entre os assuntos teóricos com a prática laboratorial auxiliam
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <a class="js-scroll-trigger" href="#astronomia"><h3 class="mb-0">Astronomia</h3></a>
-              <div class="subheading mb-3">Sub astronomia</div>
-              <p>Descrição breve sobre astronomia.</p>
+              <a class="js-scroll-trigger" href="#astronomia"><h3 class="mb-0">Astronomia</h3></a>              
+              <p>A Astronomia é uma das mais antigas ciências naturais que estuda corpos
+                celestes (estrelas, planetas, cometas, nebulosas, aglomerados de estrelas, galáxias) e
+                fenômenos que se originam fora da atmosfera da Terra (radiação cósmica).</p>
+            </div>            
+          </div>
+
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <a class="js-scroll-trigger" href="#mecanica"><h3 class="mb-0">Mecânica</h3></a>              
+              <p>A Mecânica é o ramo da Física responsável pelo estudo dos movimentos dos
+                corpos, bem como suas evoluções temporais e as equações matemáticas que os
+                determinam, sendo um estudo de extrema importância, com inúmeras aplicações
+                cotidianas.</p>
+            </div>            
+          </div>
+
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <a class="js-scroll-trigger" href="#mecanica_fluidos"><h3 class="mb-0">Mecânica dos Fluídos</h3></a>              
+              <p>A mecânica dos fluídos é o ramo da mecânica que estuda o comportamento
+                físico dos fluídos e suas propriedades, bem como seu comportamento referente aos
+                gases e líquidos.</p>
+            </div>            
+          </div>
+
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <a class="js-scroll-trigger" href="#termodinamica"><h3 class="mb-0">Termodinâmica</h3></a>              
+              <p>A termodinâmica é o ramo da física que estuda as relações de troca entre o
+                calor e o trabalho realizado na transformação de um sistema físico, quando esse interage
+                com o meio externo. Ou seja, ela estuda como a variação da temperatura, da pressão e
+                do volume interfere nos sistemas físicos. </p>
+            </div>            
+          </div>
+
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <a class="js-scroll-trigger" href="#optica"><h3 class="mb-0">Óptica</h3></a>              
+              <p>Óptica é a parte da Física responsável pelo estudo dos fenômenos associados à
+                luz. Os fenômenos relacionados à Óptica são conhecidos desde a Antiguidade. Existem
+                registros de que, em 2.283 a.c., já eram utilizados cristais de rocha para observar as
+                estrelas. 
+                </p>
+            </div>            
+          </div>
+
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <a class="js-scroll-trigger" href="#ondulatoria"><h3 class="mb-0">Ondulatória</h3></a>              
+              <p>Chamamos de Ondulatória a parte da Física que é responsável por estudar as
+                características e propriedades em comum dos movimentos das ondas. As ondas são
+                perturbações que se propagam no espaço ou em meios materiais transportando energia.
+                </p>
+            </div>            
+          </div>
+
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <a class="js-scroll-trigger" href="#eletromagnetismo"><h3 class="mb-0">Eletromagnetismo</h3></a>              
+              <p>O eletromagnetismo é o ramo da física que estuda as propriedades elétricas e
+                magnéticas da matéria, em particular as relações estabelecidas entre elas. Durante muito
+                tempo, acreditou-se que eletricidade e magnetismo formavam o mesmo fenômeno. Foi
+                somente em 1600 que o médico e físico inglês Gilbert escreveu um livro distinguindo as
+                duas teorias. 
+                </p>
+            </div>            
+          </div>
+
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <a class="js-scroll-trigger" href="#fisica_moderna"><h3 class="mb-0">Física Moderna</h3></a>              
+              <p>Com o desenvolvimento da Mecânica Quântica, através dos trabalhos de Albert
+                Einstein, Niels Bohr, Werner Heisenberg, Wolfgang Pauli, Erwin Schrödinger, entre
+                outros, descobriu-se o comportamento dual dos elementos atômicos e das ondas
+                eletromagnéticas, que ora se manifestavam como partículas, tendo massa e dimensões
+                definidas, ora se manifestavam como ondas. 
+                </p>
             </div>            
           </div>
 
